content/en/examples/service/networking/custom-dns.yaml
---
{
  apiVersion: "v1",
  kind: "Pod",
  metadata: {
    namespace: "default",
    name: "dns-example",
  },
  spec: {
    containers: [{
      name: "test",
      image: "nginx",
    }],
    dnsPolicy: "None",
    dnsConfig: {
      nameservers: [
        "192.0.2.1", # this is an example
      ],
      searches: [
        "ns1.svc.cluster-domain.example",
        "my.dns.search.suffix",
      ],
      options: [{
        name: "ndots",
        value: "2",
      }, {
        name: "edns0",
      }],
    },
  },
}
