content/en/examples/service/networking/hostaliases-pod.yaml
---
{
  apiVersion: "v1",
  kind: "Pod",
  metadata: {
    name: "hostaliases-pod",
  },
  spec: {
    restartPolicy: "Never",
    hostAliases: [{
      ip: "127.0.0.1",
      hostnames: [
        "foo.local",
        "bar.local",
      ],
    }, {
      ip: "10.1.2.3",
      hostnames: [
        "foo.remote",
        "bar.remote",
      ],
    }],
    containers: [{
      name: "cat-hosts",
      image: "busybox:1.28",
      command: [
        "cat",
      ],
      args: [
        "/etc/hosts",
      ],
    }],
  },
}
