content/en/examples/service/networking/dual-stack-default-svc.yaml
---
{
  apiVersion: "v1",
  kind: "Service",
  metadata: {
    name: "my-service",
    labels: {
      app.kubernetes.io/name: "MyApp",
    },
  },
  spec: {
    selector: {
      app.kubernetes.io/name: "MyApp",
    },
    ports: [{
      protocol: "TCP",
      port: 80,
    }],
  },
}
