content/en/examples/service/networking/dual-stack-ipv6-svc.yaml
---
{
  apiVersion: "v1",
  kind: "Service",
  metadata: {
    name: "my-service",
  },
  spec: {
    ipFamily: "IPv6",
    selector: {
      app.kubernetes.io/name: "MyApp",
    },
    ports: [{
      protocol: "TCP",
      port: 80,
      targetPort: 9376,
    }],
  },
}
