content/en/examples/service/networking/nginx-svc.yaml
---
{
  apiVersion: "v1",
  kind: "Service",
  metadata: {
    name: "my-nginx",
    labels: {
      run: "my-nginx",
    },
  },
  spec: {
    ports: [{
      port: 80,
      protocol: "TCP",
    }],
    selector: {
      run: "my-nginx",
    },
  },
}
