content/en/examples/service/networking/ingress-resource-backend.yaml
---
{
  apiVersion: "networking.k8s.io/v1",
  kind: "Ingress",
  metadata: {
    name: "ingress-resource-backend",
  },
  spec: {
    defaultBackend: {
      resource: {
        apiGroup: "k8s.example.com",
        kind: "StorageBucket",
        name: "static-assets",
      },
    },
    rules: [{
      http: {
        paths: [{
          path: "/icons",
          pathType: "ImplementationSpecific",
          backend: {
            resource: {
              apiGroup: "k8s.example.com",
              kind: "StorageBucket",
              name: "icon-assets",
            },
          },
        }],
      },
    }],
  },
}
