content/en/examples/service/networking/minimal-ingress.yaml
---
{
  apiVersion: "networking.k8s.io/v1",
  kind: "Ingress",
  metadata: {
    name: "minimal-ingress",
  },
  spec: {
    ingressClassName: "nginx-example",
    rules: [{
      http: {
        paths: [{
          path: "/testpath",
          pathType: "Prefix",
          backend: {
            service: {
              name: "test",
              port: {
                number: 80,
              },
            },
          },
        }],
      },
    }],
  },
}
