content/en/examples/service/networking/name-virtual-host-ingress.yaml
---
{
  apiVersion: "networking.k8s.io/v1",
  kind: "Ingress",
  metadata: {
    name: "name-virtual-host-ingress",
  },
  spec: {
    rules: [{
      host: "foo.bar.com",
      http: {
        paths: [{
          pathType: "Prefix",
          path: "/",
          backend: {
            service: {
              name: "service1",
              port: {
                number: 80,
              },
            },
          },
        }],
      },
    }, {
      host: "bar.foo.com",
      http: {
        paths: [{
          pathType: "Prefix",
          path: "/",
          backend: {
            service: {
              name: "service2",
              port: {
                number: 80,
              },
            },
          },
        }],
      },
    }],
  },
}
