content/en/examples/service/networking/network-policy-allow-all-egress-deny-all-ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-egress-deny-ingress
spec:
  podSelector: {} 
  policyTypes:
    - Egress
    - Ingress
  egress:
    - {}
  ingress: [] # Removing this line also works
