content/en/examples/service/networking/network-policy-allow-all-ingress.yaml
---
{
  apiVersion: "networking.k8s.io/v1",
  kind: "NetworkPolicy",
  metadata: {
    name: "allow-all-ingress",
  },
  spec: {
    podSelector: {},
    ingress: [{}],
    policyTypes: [
      "Ingress",
    ],
  },
}
