content/en/examples/service/networking/nginx-policy.yaml
---
{
  apiVersion: "networking.k8s.io/v1",
  kind: "NetworkPolicy",
  metadata: {
    name: "access-nginx",
  },
  spec: {
    podSelector: {
      matchLabels: {
        app: "nginx",
      },
    },
    ingress: [{
      from: [{
        podSelector: {
          matchLabels: {
            access: "true",
          },
        },
      }],
    }],
  },
}
